amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.


VERSION 0.8.0:
  * fix: fixed crash bug in playlist searching
  * fix: fixed crash bug when removing playlist-items
  * chg: new layout has been adopted
  * add: added accepting files dropped onto systray icon
  * fix: significant reduction in memory consumption for PlaylistItems
  * fix: hardware mixer works again
  * chg: replaced sliders with custom slider class, which fits better in our design
  * fix: exchanged c32-app-amarok.png with the correct (active) version
  * fix: amarok.desktop file. now we show up in the k-menu again.
  * fix: crossfading aRts module. the fading is now much smoother than before
  * fix: crossfading bug. before the fix amaroK sometimes mixed up the two xfade sources,
         so it sort of faded in reverse (==crap)
  * add: tag reading in separate thread
  * add: re-added m_optCrossFade, so we don't lose the crossfade length on switching it on/off.
         set default crossfade length to 2500.
  * chg: "Title Streaming" on by default
  * chg: integrated streambrowser into playlist window
  * add: added dcop implementation for url adding. Relevant diffs for mediacontrol are
         available.
  * fix: libamarokarts detection code
  * add: added long-awaited DCOP methods for manipulating the playback. This also adds
         integration with kdeaddons/kicker-applets/mediacontrol.
  * chg: moved DCOP handler to a separate class/file
  * add: threaded playlist insertion
  * fix: removed bugs and waste code keyhandling in browser*, it mostly works as expected
         now with various keypresses going to the correct places
  * fix: cleaned the playlist class's public interface, also fixed some unreported bugs in
         process (inconsistent recursive behavior), please keep the encapsulation, it's a
         good thing (tm)
  * fix: tweaked undo/redo behavior
  * chg: exchanged old player icons with new ones made by